# astronomican-ai

./: README.md  pyproject.toml  ruff.toml
astronomican_ai/: run.py
