[tool.poetry]
name = "astronomican_ai"
version = "0.1.0"
description = ""
authors = ["jedmiasterjonny <46541898+jedimasterjonny@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vertexai = "^1.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
